test/interaction/CompilationWarnings.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Error*" "———— Error ————————————————————————————————————————————————— error: [CompilationError] Compilation error: MAlonzo/Code/CompilationWarnings.hs:«line»:«col»: error: [GHC-87110] Could not load module ‘Data.Text’. It is a member of the hidden package ‘text-2.1.3’. Use -v to see a list of the files searched for. | 20 | import qualified Data.Text | ^^^^^^^^^^^^^^^^^^^^^^^^^^ ———— Warnings —————————————————————————————————————————————— CompilationWarnings.agda:9.1-36: warning: -W[no]UselessInline It is pointless for INLINE'd function id to have a separate Haskell definition" nil)
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
